--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,6 @@
 .PHONY : clean
 
 clean:
-	rm -rf *~ .snakemake
-	rm -rf cutadapt-1.10 samtools-1.3.1 bowtie-1.1.2 RSEM-1.2.31 PROBer-0.2.0
-	rm -rf ._*
+	rm -rf *~ cutadapt-1.10 samtools-1.3.1 bowtie-1.1.2 RSEM-1.2.31 PROBer-0.2.0 sratoolkit.2.6.3-ubuntu64*
+
 
