--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,10 +1,7 @@
 .PHONY: clean
 
 clean: 
-	rm -rf *~ scripts/*~ .snakemake
-	rm -f sim_ground_truth* input_list_boxplot.txt digital_spike.*
-	rm -rf simulation sim_rsem sim_fake
-	rm -rf spike_in_1e5TPM spike_in_1e4TPM spike_in_1e3TPM spike_in_1e2TPM
+	rm -rf *.* ground_truth
 
 
 
