--- a/simulation/Snakefile
+++ b/simulation/Snakefile
@@ -16,13 +16,11 @@ rule build_simulation:
 			shell("cp {{input[{i}]}} {{output[{i}]}}".format(i = i))
 
 
-def get_seeds(wildcards):
-	if wildcards.number == '1':
-		random.seed(20160611)
-	else:
-		assert wildcards.number == '2'
-		random.seed(0)
+seed_map = {"1" : 20160611, "2" : 0, "1e2" : 100, "1e3" : 1000, "1e4" : 10000, "1e5" : 100000}
 
+def get_seeds(wildcards):
+	key = wildcards.number if hasattr(wildcards, "number") else wildcards.TPM
+	random.seed(seed_map[key])
 	return [random.getrandbits(32), random.getrandbits(32)]
 
 
@@ -38,6 +36,7 @@ rule simulate:
 		"{PROBer} simulate --seed {params.seeds[0]} {input[0]} {input[1]} {input[2]} minus 30000000 {params.output_name} && "
 		"{PROBer} simulate --seed {params.seeds[1]} {input[0]} {input[1]} {input[2]} plus 30000000 {params.output_name}"
 
+
 rule generate_input_list_for_boxplot:
 	input:
 		"{path}/ground_truth.expr".format(path = sim_path),
@@ -47,11 +46,47 @@ rule generate_input_list_for_boxplot:
 	shell:
 		"{script_path}/generate_input_list {input} {output}"
 
-# rule generate_spike_in_parameters:
-#      input: "{}/sim_ground_truth.{{suffix}}".format(SIMPARAM_PATH),
-#             expand("{file}.{{suffix}}", file = SHAPE_RNAS)
-#      output: "{}/digital_spike.{{suffix}}".format(SIMPARAM_PATH)
-#      shell: "{SIMPARAM_PATH}/scripts/insertBetaGamma {input[0]} {output} {input[1]} {input[2]} {input[3]}"
+
+rule generate_spike_in_ground_truth:
+	input:
+		"{path}/ground_truth.{{suffix}}".format(path = sim_path),
+		expand("{path}/{name}.{{suffix}}", path = gt_path, name = spike_ins)
+	output:
+		"{path}/ground_truth_spikes.{{suffix}}".format(path = sim_path)
+	shell:
+		"{script_path}/insertBetaGamma {input[0]} {output} {input[1]} {input[2]} {input[3]}"
+
+rule build_spike_in_simulation:
+	input: 
+		expand("{path}/ground_truth_spikes.{suffix}", path = sim_path, suffix = ["gamma", "beta"]),
+		expand("{path}/ground_truth.stat/ground_truth_{channel}.read_model", path = sim_path, channel = ["minus", "plus"]),
+		"{path}/spikes_info.txt".format(path = gt_path),
+		"{path}/ground_truth.expr".format(path = sim_path),
+		expand("{path}/ground_truth.stat/ground_truth_{channel}.theta", path = sim_path, channel = ["minus", "plus"])
+	output:
+		expand("{path}/ground_truth_spikes_{{TPM}}.{suffix}", path = sim_path, suffix = ["gamma", "beta"]),		
+		expand("{path}/ground_truth_spikes_{{TPM}}.stat/ground_truth_spikes_{{TPM}}_{channel}.read_model", path = sim_path, channel = ["minus", "plus"]),
+		"{path}/ground_truth_spikes_{{TPM}}.expr".format(path = sim_path),
+		expand("{path}/ground_truth_spikes_{{TPM}}.stat/ground_truth_spikes_{{TPM}}_{channel}.theta", path = sim_path, channel = ["minus", "plus"]),
+		touch("{path}/ground_truth_spikes_{{TPM}}".format(path = sim_path))
+	run:
+		shell("mkdir -p {sim_path}/ground_truth_spikes_{wildcards.TPM}.stat")
+		for i in range(4):
+			shell("cp {{input[{0}]}} {{output[{0}]}}".format(i))
+		shell("{script_path}/convertThetaforSpike {sim_path}/ground_truth_spikes_{wildcards.TPM} {wildcards.TPM} {input[4]} {input[5]} {input[6]} {input[7]}")
+
+rule simulate_spike_in:
+	input:
+		arabidopsis_spike,
+		"{path}/structure_seq_sim.config".format(path = sim_path),
+		"{path}/ground_truth_spikes_{{TPM}}".format(path = sim_path),
+		PROBer
+	params: seeds = get_seeds, output_name = "{path}/structure_seq_spikes_{{TPM}}".format(path = sim_path)
+	output:
+		expand("{path}/structure_seq_spikes_{{TPM}}_{channel}.fq", path = sim_path, channel = ["minus", "plus"])
+	shell:
+		"{PROBer} simulate --seed {params.seeds[0]} {input[0]} {input[1]} {input[2]} minus 30000000 {params.output_name} && "
+		"{PROBer} simulate --seed {params.seeds[1]} {input[0]} {input[1]} {input[2]} plus 30000000 {params.output_name}"
 
 
 # rule build_sim_rsem:
@@ -63,76 +98,9 @@ rule generate_input_list_for_boxplot:
 #         shell("cp {input[0]} {output[0]}")
 #         shell("{SIMPARAM_PATH}/scripts/convert_to_rsem_model {input[1]} {output[1]}")
 
-# rule build_spike_in:
-#      input: expand("{path}/digital_spike.{suffix}", path = SIMPARAM_PATH, suffix = ["gamma", "beta"]),
-#             expand("{path}/sim_ground_truth_{channel}.read_model", path = SIMPARAM_PATH, channel = CHANNELS),
-#             "{}/spikes_info.txt".format(ANNO_PATH),
-#             "{}/sim_ground_truth.expr".format(SIMPARAM_PATH),
-#             expand("{path}/sim_ground_truth_{channel}.theta", path = SIMPARAM_PATH, channel = CHANNELS)
-#      output: expand("{path}/{name}/{name}.{suffix}", path = SIMPARAM_PATH, name = "spike_in_{expr}TPM", suffix = ["gamma", "beta"]),
-#              expand("{path}/{name}/{name}.stat/{name}_{channel}.read_model", path = SIMPARAM_PATH, name = "spike_in_{expr}TPM", channel = CHANNELS),
-#              expand("{path}/{name}/{name}.expr", path = SIMPARAM_PATH, name = "spike_in_{expr}TPM"),
-#              expand("{path}/{name}/{name}.stat/{name}_{channel}.theta", path = SIMPARAM_PATH, name = "spike_in_{expr}TPM", channel = CHANNELS)
-#      run:
-#         shell("mkdir -p {SIMPARAM_PATH}/spike_in_{wildcards.expr}TPM/spike_in_{wildcards.expr}TPM.stat")
-#         for i in range(4):
-#             shell("cp {{input[{0}]}} {{output[{0}]}}".format(i))
-#         shell("{SIMPARAM_PATH}/scripts/convertThetaforSpike {SIMPARAM_PATH}/spike_in_{wildcards.expr}TPM/spike_in_{wildcards.expr}TPM {wildcards.expr} {input[4]} {input[5]} {input[6]} {input[7]}")
-
-# rule build_fake:
-#      input: expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = PROBER_SUFF),
-#             expand("{path}/sim_ground_truth_{channel}.{suffix}", path = SIMPARAM_PATH, channel = "minus", suffix = PROBER_STAT),
-#             expand("{path}/sim_ground_truth_{channel}.{suffix}", path = SIMPARAM_PATH, channel = "plus", suffix = PROBER_STAT)
-#      output: expand("{path}/{name}/{name}.{suffix}", path = SIMPARAM_PATH, name = "sim_fake", suffix = PROBER_SUFF),
-#              expand("{path}/{name}/{name}.stat/{name}_{channel}.{suffix}", path = SIMPARAM_PATH, name = "sim_fake", channel = "minus", suffix = PROBER_STAT),
-#              expand("{path}/{name}/{name}.stat/{name}_{channel}.{suffix}", path = SIMPARAM_PATH, name = "sim_fake", channel = "plus", suffix = PROBER_STAT)
-#      run:
-#         shell("mkdir -p {SIMPARAM_PATH}/sim_fake/sim_fake.stat")
-#         for i in range(len(input)):
-#             if i != 1:
-#                shell("cp {{input[{0}]}} {{output[{0}]}}".format(i))
-#         shell("{SIMPARAM_PATH}/scripts/makeFakeBeta {ANNO_PATH} {input[1]} {output[1]} 20150528")
-
-
-# rule simulate2:
-#      input: TOOLS[5],
-#             rules.build_simulation.output,
-#             REF_FILT
-#      output: expand("{path}/{name}_{channel}_{num}.fq", path = DATA_PATH, name = SIM2, channel = CHANNELS, num = [1, 2])
-#      run:
-#         random.seed(0)
-#         my_seed = random.getrandbits(32)
-#         shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/simulation/simulation minus 30000000 {DATA_PATH}/{SIM2} --seed {my_seed}")
-#         my_seed = random.getrandbits(32)
-#         shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/simulation/simulation plus 30000000 {DATA_PATH}/{SIM2} --seed {my_seed}")
-
 # rule rsem_simulate:
 #      input: TOOLS[4],
 #             rules.build_sim_rsem.output,
 #             REF_FILT
 #      output: "{}/{}.fq".format(DATA_PATH, RSEM_SIM)
 #      shell: "{TOOLS[4]}/rsem-simulate-reads {REF_FILT_NAME} {input[2]} {input[1]} 0.09 30000000 {DATA_PATH}/{RSEM_SIM} --seed 20150526"
-
-# rule simulate_spike_in:
-#      input: TOOLS[5],
-#             rules.build_spike_in.output,
-#             REF_SPIKE
-#      output: expand("{path}/{name}_{{expr}}TPM_{channel}_{num}.fq", path = DATA_PATH, name = SIM_SPIKE, channel = CHANNELS, num = [1, 2])
-#      run:
-#         random.seed(20150518)
-#         my_seed = random.getrandbits(32)
-#         shell("{PROBER} simulate {REF_SPIKE_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/spike_in_{wildcards.expr}TPM/spike_in_{wildcards.expr}TPM minus 30000000 {DATA_PATH}/{SIM_SPIKE}_{wildcards.expr}TPM --seed {my_seed}")
-#         my_seed = random.getrandbits(32)
-#         shell("{PROBER} simulate {REF_SPIKE_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/spike_in_{wildcards.expr}TPM/spike_in_{wildcards.expr}TPM plus 30000000 {DATA_PATH}/{SIM_SPIKE}_{wildcards.expr}TPM --seed {my_seed}")
-
-# rule simulate_fake:
-#      input: TOOLS[5],
-#             rules.build_fake.output,
-#             REF_FILT
-#      output: expand("{path}/{name}_{channel}_{num}.fq", path = DATA_PATH, name = FAKE, channel = CHANNELS, num = [1, 2])
-#      run:
-#         random.seed(20150528)
-#         my_seed = random.getrandbits(32)
-#         shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/sim_fake/sim_fake minus 30000000 {DATA_PATH}/{FAKE} --seed {my_seed}")
-#         my_seed = random.getrandbits(32)
-#         shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/sim_fake/sim_fake plus 30000000 {DATA_PATH}/{FAKE} --seed {my_seed}")
