--- a/simulation/Snakefile
+++ b/simulation/Snakefile
@@ -89,18 +89,22 @@ rule simulate_spike_in:
 		"{PROBer} simulate --seed {params.seeds[1]} {input[0]} {input[1]} {input[2]} plus 30000000 {params.output_name}"
 
 
-# rule build_sim_rsem:
-#      input: "{}/sim_ground_truth.expr".format(SIMPARAM_PATH),
-#             "{}/sim_ground_truth_minus.read_model".format(SIMPARAM_PATH)
-#      output: expand("{path}/sim_rsem/sim_rsem.{suffix}", path = SIMPARAM_PATH, suffix = ["isoforms.results", "model"])
-#      run:
-#         shell("mkdir -p {SIMPARAM_PATH}/sim_rsem")
-#         shell("cp {input[0]} {output[0]}")
-#         shell("{SIMPARAM_PATH}/scripts/convert_to_rsem_model {input[1]} {output[1]}")
+rule build_RSEM_simulation:
+	input:
+		"{path}/ground_truth.expr".format(path = sim_path),
+		"{path}/ground_truth.stat/ground_truth_minus.read_model".format(path = sim_path)
+	output:
+		expand("{path}/ground_truth_RSEM.{suffix}", path = sim_path, suffix = ["isoforms.results", "model"])
+	shell:
+		"cp {input[0]} {output[0]} && "
+		"{script_path}/convert_to_rsem_model {input[1]} {output[1]}"
 
-# rule rsem_simulate:
-#      input: TOOLS[4],
-#             rules.build_sim_rsem.output,
-#             REF_FILT
-#      output: "{}/{}.fq".format(DATA_PATH, RSEM_SIM)
-#      shell: "{TOOLS[4]}/rsem-simulate-reads {REF_FILT_NAME} {input[2]} {input[1]} 0.09 30000000 {DATA_PATH}/{RSEM_SIM} --seed 20150526"
+rule simulate_RSEM:
+	input:
+		arabidopsis_filt_rsem,
+		rules.build_RSEM_simulation.output,
+		RSEM_simulate
+	params: "{path}/structure_seq_simrsem".format(path = sim_path)
+	output:
+		"{path}/structure_seq_simrsem.fq".format(path = sim_path)
+	shell: "{RSEM_simulate} {input[0]} {input[2]} {input[1]} 0.09 30000000 {params} --seed 20160613"
